feat added responsive banner-section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="row gx-lg-2 gx-xxl-0">
                 <div class="col-lg-3">
                     <a class="navbar-brand" href="index.html">
-                        <img src="icons/logo.svg" alt="Logo" class="img-fluid onject-fit-cover">
+                        <img src="icons/logo.svg" alt="Logo" class="img-fluid onject-fit-cover logo">
                     </a>
                 </div>
                 <div class="col-lg-9">
@@ -60,7 +60,7 @@
         <div class="container-fluid bg-dark-nav">
             <nav class="navbar navbar-expand-lg ">
                 <a class="navbar-brand d-lg-none d-inline-block" href="index.html">
-                    <img src="icons/logo.svg" alt="Logo" class="logo-img">
+                    <img src="icons/logo.svg" alt="Logo" class="logo">
                 </a>
                 <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,6 +106,72 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section class="py-lg-5 py-3">
+            <div class="container-fluid">
+                <div class="row justify-content-between">
+                    <div class="col-lg-3">
+                        <div class="w-100 h-100">
+                            <aside class="catalog bordered-top">
+                                  <p class="px-4 bg-corp text-white py-2 bordered-top mb-0">Каталог</p>
+                                  <ul class="list-unstyled border">
+                                    <li class="border-bottom px-2 py-2">
+                                        <div class="btn-group dropend d-lg-block d-none">
+                                            <a href="#" type="button" class="" data-bs-toggle="dropdown" aria-expanded="false">
+                                                Установки для промывки глаз
+                                            </a>
+                                            <ul class="dropdown-menu py-0 w-max-content rounded-0 custom-transform">
+                                                <li class="px-2 border-bottom py-2"><a href="#">Системы промывания и обеззараживающие души</a></li>
+                                                <li class="px-2 border-bottom py-2"><a href="#">Портативные системы промывания глаз</a></li>
+                                                <li class="px-2 py-2"><a href="#">Настенные промыватели и подставки</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="dropdown d-lg-none d-block">
+                                            <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                Установки для промывки глаз
+                                            </a>
+                                        
+                                            <ul class="dropdown-menu py-0 w-max-content-lg rounded-0">
+                                                <li class="px-2 border-bottom py-2"><a href="#">Системы промывания и обеззараживающие души</a></li>
+                                                <li class="px-2 border-bottom py-2"><a href="#">Портативные системы промывания глаз</a></li>
+                                                <li class="px-2 py-2"><a href="#">Настенные промыватели и подставки</a></li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Установки для блокировки (замки)</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Паяльники, зажимы</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Системы для заземления</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Системы молниезащиты</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Кабельные зажимы и хомуты</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Системы снижения сопротивления</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Спасательный штатив</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="#">Средства индивид. защиты</a></li>
+                                    <li class="px-2 py-2"><a href="#">Ликвидация нефтепродуктов</a></li>
+                                  </ul>
+                            </aside>
+                        </div>
+                    </div>
+                    <div class="col-xxl-8 col-lg-9">
+                        <div class="w-100 h-100">
+                            <div class="position-relative">
+                                <img src="images/home-page/banner-img.png" alt="" class="img-fluid object-fit-cover w-100 d-sm-block d-none">
+                                <img src="images/home-page/banner-img-mobile.png" alt="" class="img-fluid object-fit-cover w-100 d-sm-none d-block">
+                                <div class="position-absolute banner-info-box ps-md-5 pe-md-0 px-3 py-sm-5 py-3 d-flex flex-column justify-content-between">
+                                    <h3 class="text-white fs-title fw-medium text-balance">
+                                        Установки для промывки глаз
+                                    </h3>
+                                    <a href="eye-washing-1.html" class="btn btn-primary">Подробнее</a>
+                                </div>
+                            </div>
+                            <p class="fs-title fw-medium opacity-75  lh-1 mt-4 d-lg-block d-none">
+                                Легкость в решениях, удобство в процессе, надежность в партнерстве!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/ab16f4767e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
