chore: add links and blank pages

--- a/index.html
+++ b/index.html
@@ -117,36 +117,36 @@
                                   <ul class="list-unstyled border">
                                     <li class="border-bottom px-2 py-2">
                                         <div class="btn-group dropend d-lg-block d-none">
-                                            <a href="#" type="button" class="" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <a href="#" type="button"  data-bs-toggle="dropdown" aria-expanded="false">
                                                 Установки для промывки глаз
                                             </a>
-                                            <ul class="dropdown-menu py-0 w-max-content rounded-0 custom-transform">
-                                                <li class="px-2 border-bottom py-2"><a href="#">Системы промывания и обеззараживающие души</a></li>
-                                                <li class="px-2 border-bottom py-2"><a href="#">Портативные системы промывания глаз</a></li>
-                                                <li class="px-2 py-2"><a href="#">Настенные промыватели и подставки</a></li>
+                                            <ul class="dropdown-menu py-0 w-max-content-lg rounded-0 custom-transform">
+                                                <li class="px-2 border-bottom py-2"><a href="washing-showers.html">Системы промывания и обеззараживающие души</a></li>
+                                                <li class="px-2 border-bottom py-2"><a href="portative-washing.html">Портативные системы промывания глаз</a></li>
+                                                <li class="px-2 py-2"><a href="wall-washers.html">Настенные промыватели и подставки</a></li>
                                             </ul>
                                         </div>
                                         <div class="dropdown d-lg-none d-block">
-                                            <a class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <a  href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                                 Установки для промывки глаз
                                             </a>
                                         
                                             <ul class="dropdown-menu py-0 w-max-content-lg rounded-0">
-                                                <li class="px-2 border-bottom py-2"><a href="#">Системы промывания и обеззараживающие души</a></li>
-                                                <li class="px-2 border-bottom py-2"><a href="#">Портативные системы промывания глаз</a></li>
-                                                <li class="px-2 py-2"><a href="#">Настенные промыватели и подставки</a></li>
+                                                <li class="px-2 border-bottom py-2"><a href="washing-showers.html">Системы промывания и обеззараживающие души</a></li>
+                                                <li class="px-2 border-bottom py-2"><a href="portative-washing.html">Портативные системы промывания глаз</a></li>
+                                                <li class="px-2 py-2"><a href="wall-washers.html">Настенные промыватели и подставки</a></li>
                                             </ul>
                                         </div>
                                     </li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Установки для блокировки (замки)</a></li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Паяльники, зажимы</a></li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Системы для заземления</a></li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Системы молниезащиты</a></li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Кабельные зажимы и хомуты</a></li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Системы снижения сопротивления</a></li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Спасательный штатив</a></li>
-                                    <li class="border-bottom px-2 py-2"><a href="#">Средства индивид. защиты</a></li>
-                                    <li class="px-2 py-2"><a href="#">Ликвидация нефтепродуктов</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="locks.html">Установки для блокировки (замки)</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="soldering-iron.html">Паяльники, зажимы</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="grounding-systems.html">Системы для заземления</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="lightning-protection-systems.html">Системы молниезащиты</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="cable-clamps.html">Кабельные зажимы и хомуты</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="drag-lower-systems.html">Системы снижения сопротивления</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="rescue-tripod.html">Спасательный штатив</a></li>
+                                    <li class="border-bottom px-2 py-2"><a href="individual-protection.html">Средства индивид. защиты</a></li>
+                                    <li class="px-2 py-2"><a href="petrolean-elumination.html">Ликвидация нефтепродуктов</a></li>
                                   </ul>
                             </aside>
                         </div>
@@ -160,7 +160,7 @@
                                     <h3 class="text-white fs-title fw-medium text-balance">
                                         Установки для промывки глаз
                                     </h3>
-                                    <a href="eye-washing-1.html" class="btn btn-primary">Подробнее</a>
+                                    <a href="washing-showers.html" class="btn btn-primary">Подробнее</a>
                                 </div>
                             </div>
                             <p class="fs-title fw-medium opacity-75  lh-1 mt-4 d-lg-block d-none">
