feat: add responsive footer layout

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 </address>
                             </div>
                             <div class=" col-lg-3 col-xxl-2">
-                                <a href="tel:+37065535884"> 
+                                <a href="#"> 
                                     <i class="bi bi-globe me-2"></i>zerofivenine.uz</a>
                             </div>
                             <div class=" col-lg-1 col-md-6">
@@ -171,7 +171,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-3">
+        <section id="catalog" class="py-lg-5 py-3">
             <div class="container-fluid">
                 <h3 class="fs-section-title text-uppercase">
                     Каталог
@@ -268,7 +268,7 @@
                 <a href="#" class="d-lg-none d-block w-fit-content mx-auto text-corp text-decoration-underline fw-semibold mt-5 fs-5">Смотреть еще</a>
             </div>
         </section>
-        <section class="py-lg-5 py-3">
+        <section id="newItems" class="py-lg-5 py-3">
             <div class="container-fluid">
                 <h3 class="fs-section-title text-uppercase">
                     Подбор товаров
@@ -525,6 +525,70 @@
             </div>
         </section>
     </main>
+    <footer class="bg-corp py-lg-5 py-3 text-white">
+        <div class="container-fluid">
+            <div class="row justify-content-center gy-4">
+                <div class="col-lg-3 col-6">
+                    <div class="w-100 h-100 d-flex justify-content-center">
+                        <img src="icons/footer-logo.svg" alt="" class="img-fluid footer-logo">
+                    </div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="w-100 h-100 d-flex align-items-center justify-content-center">
+                        <div class="row justify-content-between w-100 gy-4">
+                            <div class="col-xl-2 col-lg-6">
+                                <div class="w-100 h-100 fs-paragraph-2 d-flex justify-content-lg-start justify-content-center text-lg-start text-center">
+                                    <ul class="list-unstyled w-fit-content mb-0">
+                                        <li class="mb-2">
+                                            <a href="about.html" class="">О компании</a>
+                                        </li>
+                                        <li class="mb-2">
+                                            <a href="#catalog" class="">Каталог</a>
+                                        </li>
+                                        <li class="mb-2">
+                                            <a href="news.html" class="">Новости компании</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="w-100 h-100 fs-paragraph-2">
+                                    <ul class="list-unstyled mb-0">
+                                        <li class="mb-2 d-flex align-items-center justify-content-lg-start justify-content-center">
+                                            <i class="bi bi-telephone fs-5"></i>
+                                            <div class="ms-3">
+                                                <a href="tel:+998983648877" class="d-block">+998 98 364 88 77</a>
+                                                <a href="tel:+998988888877" class="d-block">+998 98 888 88 77</a>
+                                            </div>
+                                        </li>
+                                        <li class="d-flex align-items-center text-lg-start text-center justify-content-lg-start justify-content-center">
+                                            <i class="bi bi-geo-alt me-3 fs-5"></i>
+                                            <address class="mb-0">
+                                                <span>г. Ташкент Мирзо-Улугбекский район, Дурмон Йули 52</span>
+                                            </address>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-lg-6">
+                                <div class="w-100 h-100 fs-paragraph-2 d-flex justify-content-lg-start justify-content-center">
+                                    <ul class="d-flex flex-column justify-content-between h-100 list-unstyled w-fit-content">
+                                        <li class="mb-2">
+                                            <a href="mailto:info@zerofivenine.uz" class=""><i class="bi bi-envelope me-3 fs-5"></i>info@zerofivenine.uz</a>
+                                        </li>
+                                        <li class="mb-2">
+                                            <a href="#">
+                                                <i class="bi bi-globe me-3 fs-5"></i>zerofivenine.uz</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/ab16f4767e.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
