feat: add information section

--- a/about.html
+++ b/about.html
@@ -386,6 +386,105 @@
                 </div>
             </div>
         </section>
+        <section class="px-xxl-5 py-lg-5 py-3">
+            <div class="container-fluid">
+                <div class="row gx-0 gy-0">
+                    <div class="col-lg-6">
+                        <div class="w-100 h-100 position-relative">
+                            <img src="images/about-page/banner-info-bg-1.png" alt="" class="img-fluid border-custom-left object-fit-cover w-100 h-100">
+                            <div class="position-absolute text-box w-100 px-5">
+                                <h6 class="mb-0 fs-title-2 ff-mont fw-bold text-white text-lg-start text-center">
+                                    Мы работаем в формате B2B и ориентируемся на долгосрочное партнёрство, помогая вашим бизнес-процессам стать более
+                                    эффективными.
+                                </h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="w-100 h-100">
+                            <img src="images/about-page/banner-info-bg-2.png" alt="" class="img-fluid border-custom-right object-fit-cover w-100 h-100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="px-xxl-5 py-lg-5 py-3">
+            <div class="container-fluid">
+                <div class="bg-light-blue px-lg-5 px-3 py-5 rounded-5 text-center">
+                    <h3 class="fw-bold ff-mont mb-lg-5">Наши преимущества</h3>
+                    <div class="row gx-lg-5 gy-5 justify-content-xxl-evenly d-lg-flex d-none">
+                        <div class="col-xxl-3 col-lg-4">
+                            <div
+                                class="w-100 h-100 card-hover rounded-5 px-lg-5 py-lg-3 text-center d-flex flex-column justify-content-center align-items-center">
+                                <img src="icons/about-page/9.svg" alt="">
+                                <p class="text-balance fs-paragraph mb-0 mb-auto">
+                                    Офисные и производственные товары
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xxl-3 col-lg-4">
+                            <div
+                                class="w-100 h-100 card-hover rounded-5 px-lg-5 py-lg-3 text-center d-flex flex-column justify-content-center align-items-center">
+                                <img src="icons/about-page/10.svg" alt="">
+                                <p class="text-balance fs-paragraph mb-0 mb-auto">
+                                    Гибкие условия сотрудничества
+                                    и конкурентные цены
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xxl-3 col-lg-4">
+                            <div
+                                class="w-100 h-100 card-hover rounded-5 px-lg-5 py-lg-3 text-center d-flex flex-column justify-content-center align-items-center">
+                                <img src="icons/about-page/11.svg" alt="">
+                                <p class="text-balance fs-paragraph mb-0 mb-auto">
+                                    Оперативная доставка и внимательное обслуживание
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="position-relative mt-5 d-lg-none d-block">
+                        <div class="slick-slider categories">
+                            <div class="slider-item px-4">
+                                <div
+                                    class="w-100 h-100 card-hover card-slider-h rounded-5 px-4 py-3 text-center d-flex flex-column justify-content-center align-items-center">
+                                    <img src="icons/about-page/9.svg" alt="">
+                                    <p class="text-balance fs-paragraph mb-0 mb-auto">
+                                        Широкий ассортимент товаров для любых задач
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="slider-item px-4">
+                                <div
+                                    class="w-100 h-100 card-hover card-slider-h rounded-5 px-4 py-3 text-center d-flex flex-column justify-content-center align-items-center">
+                                    <img src="icons/about-page/10.svg" alt="">
+                                    <p class="text-balance fs-paragraph mb-0 mb-auto">
+                                        Гибкие условия сотрудничества
+                                        и конкурентные цены
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="slider-item px-4">
+                                <div
+                                    class="w-100 h-100 card-hover card-slider-h rounded-5 px-4 py-3 text-center d-flex flex-column justify-content-center align-items-center">
+                                    <img src="icons/about-page/11.svg" alt="">
+                                    <p class="text-balance fs-paragraph mb-0 mb-auto">
+                                        Оперативная доставка и внимательное обслуживание
+                                    </p>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="slider-btn-box mt-5">
+                            <button class="slider-prev border-0 bg-transparent me-5">
+                                <i class="fa-solid fa-chevron-left fs-1"></i>
+                            </button>
+                            <button class="slider-next border-0 bg-transparent">
+                                <i class="fa-solid fa-chevron-right fs-1"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="py-lg-5 py-3">
             <div class="container-fluid">
                 <h3 class="fs-section-title text-uppercase">
@@ -398,13 +497,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor
@@ -417,13 +514,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum dolor
@@ -440,13 +535,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum
@@ -459,13 +552,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum
@@ -483,13 +574,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum
@@ -502,13 +591,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum
@@ -526,13 +613,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum
@@ -545,13 +630,11 @@
                                 <div class="row justify-content-start">
                                     <div class="col-3">
                                         <div class="w-100 h-100 d-flex justify-content-center align-items-center">
-                                            <img src="images/news-images/1.png" alt=""
-                                                class="img-fluid object-fit-cover w-100">
+                                            <img src="images/news-images/1.png" alt="" class="img-fluid object-fit-cover w-100">
                                         </div>
                                     </div>
                                     <div class="col-8">
-                                        <div
-                                            class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
+                                        <div class="w-100 h-100 fs-paragraph-2 d-flex flex-column justify-content-center">
                                             <span class="fw-semibold">30 декабря 2024</span>
                                             <a href="#" class="text-corp mt-3 four-line">Lorem ipsum dolor sit amet
                                                 consectetur. Lorem ipsum
